--- a/config/config.yaml
+++ b/config/config.yaml
@@ -95,21 +95,33 @@ platforms:
     name: "今日头条"
   - id: "baidu"
     name: "百度热搜"
-  - id: "wallstreetcn-hot"
-    name: "华尔街见闻"
   - id: "thepaper"
     name: "澎湃新闻"
-  - id: "bilibili-hot-search"
-    name: "bilibili 热搜"
-  - id: "cls-hot"
-    name: "财联社热门"
   - id: "ifeng"
     name: "凤凰网"
+  - id: "cankaoxiaoxi"
+    name: "参考消息"
+  - id: "xueqiu"
+    name: "雪球"
+  - id: "jin10"
+    name: "金十数据"
+  - id: "wallstreetcn-hot"
+    name: "华尔街见闻 最热"
+  - id: "bilibili-hot-search"
+    name: "bilibili 热搜"
   - id: "tieba"
     name: "贴吧"
+  - id: "zhihu"
+    name: "知乎"
   - id: "weibo"
     name: "微博"
   - id: "douyin"
     name: "抖音"
-  - id: "zhihu"
-    name: "知乎"
+  - id: "juejin"
+    name: "掘金"
+  - id: "github"
+    name: "GitHub"
+  - id: "v2ex"
+    name: "V2EX"
+  - id: "pcbeta"
+    name: "远景论坛"
