--- a/config/config.yaml
+++ b/config/config.yaml
@@ -85,9 +85,9 @@ notification:
 
 # 用于让关注度更高的新闻在更前面显示，即用算法重新组合不同平台的热搜排序形成你侧重的热搜，合起来是 1 就行
 weight:
-  rank_weight: 0.6 # 排名权重
-  frequency_weight: 0.3 # 频次权重
-  hotness_weight: 0.1 # 热度权重
+  rank_weight: 0.8    # 主要看排名
+  frequency_weight: 0.1  # 不太在乎持续性
+  hotness_weight: 0.1
 
 # name 可以定义任意名称，只具有显示作用，即使项目运行了几天后，忽然改掉 name 也不会影响代码的正常运行
 platforms:
@@ -101,14 +101,6 @@ platforms:
     name: "凤凰网"
   - id: "cankaoxiaoxi"
     name: "参考消息"
-  - id: "xueqiu"
-    name: "雪球"
-  - id: "jin10"
-    name: "金十数据"
-  - id: "wallstreetcn-hot"
-    name: "华尔街见闻 最热"
-  - id: "bilibili-hot-search"
-    name: "bilibili 热搜"
   - id: "tieba"
     name: "贴吧"
   - id: "zhihu"
@@ -123,5 +115,3 @@ platforms:
     name: "GitHub"
   - id: "v2ex"
     name: "V2EX"
-  - id: "pcbeta"
-    name: "远景论坛"
